Remove common project, add in internal maven dependency

--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,8 @@ allprojects {
         flatDir {
             dirs 'libs'
         }
+        maven {
+            url 'http://10.4.128.12:8081/artifactory/libs-release/'
+        }
     }
 }
