--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,7 +123,7 @@ dependencies {
         exclude module: 'wagon-provider-api'
     }
 
-    compile project(':..:android-common:common')
+    compile 'com.staples.mobile.common:common:1.4.0'
 }
 
 task showTest {
